<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout
    android:id="@+id/verticalLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Class1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/math"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/Grade1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/Class2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/english"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/Grade2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/Class3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/science"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/Grade3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/Class4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/social_studies"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/Grade4"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/Class5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/music"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/Grade5"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/compute_gpa"
        android:onClick="calculateGPA"/>

    <TextView
        android:id="@+id/GPA_Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/gpa"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/GPA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/black"/>

</LinearLayout></ScrollView>